# varun-tfhard-interview

./: Cargo.toml  README.md
shared_types/: Cargo.toml
shared_types/src/: lib.rs
shared_types/src/transcript/: mod.rs  poseidon_sponge.rs
sumcheck/: Cargo.toml
sumcheck/src/: mle.rs  sumcheck.rs  utils.rs
