[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "v0.6.1", features = [
    "derive_serde",
] }
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon", tag = "v2024_01_31" } # Scroll's Poseidon impl
itertools = "0.11.0"
ark-std = "0.4.0"
num = "0.4.1"
rayon = "1.8"
rand = "0.8"
ff = "0.13.0"
thiserror = "1.0.40"
tracing = "0.1.37"
anyhow = "^1"
sha2 = "0.10.8"
